Disable AOS on mobile, fix text overlap

--- a/style.css
+++ b/style.css
@@ -108,9 +108,22 @@ h6 {
   position: relative;
   color: black;
   text-align: right;
-  top: -3rem;
+  top: -2.8rem !important;
 }
 
+.sub-headline-5 {
+  position: relative;
+  color: black;
+  text-align: right;
+  top: -5.1rem !important;
+}
+
+.sub-headline-6 {
+  position: relative;
+  color: black;
+  text-align: right;
+  top: -3.1rem !important;
+}
 /*/////// NAV /////// */
 
 .topnav {
@@ -359,9 +372,7 @@ h6 {
     font-size: 2.2rem;
   }
   h2 {
-    font-size: 2rem;
-    padding-top: 0.8rem;
-    padding-bottom: 0.7rem;
+    font-size: 1.4rem;
   }
   h4 {
     font-size: 1rem;
@@ -383,20 +394,41 @@ h6 {
     height: 42vh;
   }
   .sub-headline-2 {
+    text-align: left;
     position: relative;
     left: 0rem;
-    margin-top: -2.2rem;
-    text-align: left;
+    padding-top: 0.8rem;
+    padding-bottom: 0.3rem;
+    line-height: 1;
+    
   }
   .sub-headline-3 {
     text-align: left;
+    padding-top: 0.8rem;
+    padding-bottom: 1.4rem;
+    line-height: 1;
   }
+
   .sub-headline-4 {
     text-align: left;
-    top: -2.5rem;
+    top: -2.8rem !important;
+  }
+  
+  .sub-headline-5 {
+    text-align: left;
+    top: -2.5rem !important;
+  }
+
+  .sub-headline-6 {
+    text-align: left;
+    top: -1rem !important;
   }
   .description-two {
     text-align: left;
+  }
+  .description-three {
+    text-align: left;
+    margin-top: -1.6rem;
   }
   .img-top-one {
     margin-left: 60%;
@@ -572,6 +604,9 @@ h6 {
     text-align: left;
     padding-top: 1rem;
     margin-top: 3px;
+  }
+  .sub-headline-6 {
+    margin-top: 4.8rem;
   }
 
   .description-two {
